# microservice-deployment

./: Makefile  pyproject.toml
.github/workflows/: workflow.yml
app/api/: prediction.py
app/config/: .env
codebase/: Makefile  pyproject.toml  setup.cfg
codebase/.github/workflows/: lint.yml
codebase/src/: runner_builder.py
codebase/src/config/: .env  __init__.py  db.py
codebase/src/model/: model_builder.py  model_inference.py
codebase/src/model/models/: rf_db_v1
codebase/src/model/pipeline/: model.py
inference_service/: setup.cfg
inference_service/app/: run.py
inference_service/app/config/: logger.py  model.py
inference_service/app/schema/: apartment.py
inference_service/app/services/: model_inference.py
src/: runner.py  runner_inference.py
src/config/: .env
src/database/: db.sqlite  db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  preparation.py
