[tool.poetry]
name = "inference-service"
version = "0.1.0"
description = ""
authors = ["BarG3126 <bar3126@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
