[tool.poetry]
name = "codebase"
version = "0.1.0"
description = ""
authors = ["BarG3126 <bar3126@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
